fixed getTraversePath